--- a/NBA Diesmal aber.html
+++ b/NBA Diesmal aber.html
@@ -13,7 +13,7 @@
   <button>OK</button>
   <br>
   <br>
-  <button> News</button>
+  <button> N</button>
   <a href="https://www.nba.com/teams">
     <button>Teams</button>
   </a>
