--- a/NBA Diesmal aber.html
+++ b/NBA Diesmal aber.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-  <title>NBA Infos-Startseite</title>
+  <title>NBA Info</title>
 </head>
 <body>
   <h1 style="color:darkorange;font-style: oblique;"> NBA Infos </h1>
   <h3> Here you can find anything about the NBA</h3>
   <input placeholder="suchen">
   <button>OK</button>
-  <br>
-  <br>
+  <p>
+  <p>
   <button> News</button>
   <a href="https://www.nba.com/teams">
     <button>Teams</button>
