--- a/NBA Diesmal aber.html
+++ b/NBA Diesmal aber.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width", initial-scale="1.0">
-  <title>NBA Infos- Startseite</title>
+  <meta name="viewport" content="width=device-width", initial-scale="1.0">
+  <title>NBA Infos</title>
+<link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
-  <h1 style="color:darkorange;font-style: oblique;"> NBA Info </h1>
+ <div id="balken">
+  <h1> NBA Infos </h1>
+</div>
   <h3> Here you can find anything about the NBA</h3>
-  <input placeholder="suchen">
+  <input placeholder="search">
   <button>OK</button>
   <p>
   <p>
@@ -22,7 +25,6 @@
     </a>
   <a href="https://www.ran.de/datenbank/us-sport/nba/ergebnisse-und-tabelle/">
     <button>Scoreboard</button>
-    </a>
-<img src="ost-duell-lewis-zaehlt-zu-den.jpg">
+</a>
 </body>
 </html>
