--- a/NBA Diesmal aber.html
+++ b/NBA Diesmal aber.html
@@ -11,20 +11,31 @@
  <div id="balken">
   <h1> NBA Infos </h1>
 </div>
+
   <h3> Here you can find anything about the NBA</h3>
-  <input placeholder="search">
-  <button>OK</button>
+<div class="Search">
+      <input placeholder="search">
+        <button>OK</button>
+</div> 
   <p>
   <p>
-  <button> News</button>
+  <div class="News">
+    <button> News</button>
+  </div>
+  <div class="Teams">
   <a href="https://www.nba.com/teams">
     <button>Teams</button>
   </a>
+  </div>
+  <div class="MVPAward">
   <a href="http://www.espn.com/nba/history/awards/_/id/33">
     <button> MVP Award</button>
     </a>
+  </div>
+  <div class="Scoreboard">
   <a href="https://www.ran.de/datenbank/us-sport/nba/ergebnisse-und-tabelle/">
     <button>Scoreboard</button>
 </a>
+  </div>
 </body>
 </html>
