Co-authored-by: kt_rizzard von ozz <kt155430@users.noreply.github.com> Co-authored-by: ff_tripleF <ff155424@users.noreply.github.com>

--- a/NBA Diesmal aber.html
+++ b/NBA Diesmal aber.html
@@ -19,6 +19,13 @@
 </div> 
   <p>
   <p>
+    <nav>
+      <ul>
+        <li><a href="galerie1.html">Galerie</a></li>
+        <li><a href="News.html">News</a></li>
+        <li><a href="teams.html">Teams</a></li>
+      </ul>
+    </nav>
   <div class="News">
     <button> News</button>
   </div>
