--- a/galerie1.html
+++ b/galerie1.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
-  <title>NBA Infos</title>
+  <title>Galerie</title>
 <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
