--- a/Galerie/galerie1.html
+++ b/Galerie/galerie1.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <title>Galerie</title>
-<link rel="stylesheet" href="style.css" class="css">
+<link rel="stylesheet" href="galeriestyle.css" class="css">
 </head>
 <body>
-    <img src="<img src="bild.jpg" alt="Player">
+    <img src="bild.jpg" alt="Player">
 
 
 
