--- a/Galerie/galerie1.html
+++ b/Galerie/galerie1.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="galeriestyle.css" class="css">
 </head>
 <body>
-    <img src="bild.jpg" alt="Player">
+   <h1>Bildgalerie</h1>
 
 
 
