--- a/Galerie/galerie1.html
+++ b/Galerie/galerie1.html
@@ -9,9 +9,12 @@
 </head>
 <body>
    <h1>Bildgalerie</h1>
-
-
-
+<div class="image-container">
+   <img src="https://media.gettyimages.com/id/630377824/de/foto/view-of-the-game-ball-and-this-is-why-we-play-logo-before-the-game-between-the-golden-state.jpg?s=612x612&w=gi&k=20&c=Qflba9cMuSJboRYDxu9UFvJumOdz3bmf9LYQ_cnzJ74=" alt="Test">
+   <img src="https://sportbild.bild.de/fotos-skaliert/lebron-james-l--beim-saisonauftakt-gegen-die-golden-state-warriors-mit-steph-curry-de1a501fe6844667b8789054c7a0643c-81677482/2,w=993,c=0.sport.jpg">
+   <img src="https://cdn.prod.www.spiegel.de/images/12002e00-2a5b-4610-a4a6-9c38872818de_w948_r1.778_fpx41_fpy27.jpg">
+   <img src="https://image.discovery.indazn.com/eu/v2/eu/image?id=83008581313_image-background_pDach_1657287404000&quality=70">
+</div>
 
 
 
